--- a/Source/GrasscutterTools/FormTextMapBrowser.resx
+++ b/Source/GrasscutterTools/FormTextMapBrowser.resx
@@ -123,10 +123,13 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="TxtTextMapFilter.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 41</value>
+    <value>22, 68</value>
+  </data>
+  <data name="TxtTextMapFilter.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
   </data>
   <data name="TxtTextMapFilter.Size" type="System.Drawing.Size, System.Drawing">
-    <value>555, 23</value>
+    <value>1027, 35</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="TxtTextMapFilter.TabIndex" type="System.Int32, mscorlib">
@@ -145,10 +148,13 @@
     <value>7</value>
   </data>
   <data name="BtnSelectRecoursePath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>96, 12</value>
+    <value>178, 20</value>
+  </data>
+  <data name="BtnSelectRecoursePath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
   </data>
   <data name="BtnSelectRecoursePath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>139, 38</value>
   </data>
   <data name="BtnSelectRecoursePath.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -172,10 +178,13 @@
     <value>Top, Right</value>
   </data>
   <data name="CmbLanguage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>548, 12</value>
+    <value>1018, 20</value>
+  </data>
+  <data name="CmbLanguage.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
   </data>
   <data name="CmbLanguage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 25</value>
+    <value>182, 36</value>
   </data>
   <data name="CmbLanguage.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -199,10 +208,13 @@
     <value>True</value>
   </data>
   <data name="LblLanguage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>510, 15</value>
+    <value>947, 25</value>
+  </data>
+  <data name="LblLanguage.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="LblLanguage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>32, 17</value>
+    <value>54, 28</value>
   </data>
   <data name="LblLanguage.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -226,10 +238,13 @@
     <value>True</value>
   </data>
   <data name="ChkTopMost.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 14</value>
+    <value>22, 23</value>
+  </data>
+  <data name="ChkTopMost.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
   </data>
   <data name="ChkTopMost.Size" type="System.Drawing.Size, System.Drawing">
-    <value>51, 21</value>
+    <value>80, 32</value>
   </data>
   <data name="ChkTopMost.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -253,10 +268,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="LblResourcesPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>177, 15</value>
+    <value>329, 25</value>
+  </data>
+  <data name="LblResourcesPath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="LblResourcesPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>327, 17</value>
+    <value>607, 28</value>
   </data>
   <data name="LblResourcesPath.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -280,10 +298,13 @@
     <value>Top, Right</value>
   </data>
   <data name="BtnSearch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>573, 41</value>
+    <value>1064, 68</value>
+  </data>
+  <data name="BtnSearch.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
   </data>
   <data name="BtnSearch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>139, 38</value>
   </data>
   <data name="BtnSearch.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -312,6 +333,9 @@
   <data name="ColumnHash.HeaderText" xml:space="preserve">
     <value>Hash</value>
   </data>
+  <data name="ColumnHash.MinimumWidth" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
   <data name="ColumnHash.Width" type="System.Int32, mscorlib">
     <value>80</value>
   </data>
@@ -320,6 +344,9 @@
   </metadata>
   <data name="ColumnID.HeaderText" xml:space="preserve">
     <value>ID</value>
+  </data>
+  <data name="ColumnID.MinimumWidth" type="System.Int32, mscorlib">
+    <value>9</value>
   </data>
   <data name="ColumnID.Width" type="System.Int32, mscorlib">
     <value>240</value>
@@ -330,14 +357,23 @@
   <data name="ColumnText.HeaderText" xml:space="preserve">
     <value>Text</value>
   </data>
+  <data name="ColumnText.MinimumWidth" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
   <data name="ColumnText.Width" type="System.Int32, mscorlib">
     <value>250</value>
   </data>
   <data name="DGVTextMap.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 70</value>
+    <value>22, 115</value>
+  </data>
+  <data name="DGVTextMap.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 5, 6, 5</value>
+  </data>
+  <data name="DGVTextMap.RowHeadersWidth" type="System.Int32, mscorlib">
+    <value>72</value>
   </data>
   <data name="DGVTextMap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>636, 379</value>
+    <value>1181, 624</value>
   </data>
   <data name="DGVTextMap.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -358,19 +394,19 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 17</value>
+    <value>168, 168</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>660, 461</value>
+    <value>1226, 759</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 9pt</value>
+    <value>Microsoft YaHei, 9pt</value>
   </data>
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>7, 7, 7, 7</value>
   </data>
   <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>600, 400</value>
+    <value>1094, 617</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
